# D2.Detours

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
source/: CMakeLists.txt
source/include/: D2CMP.detours.h  D2Client.detours.h  D2Common.detours.h  DetoursAutoPatchDirectory.h  DetoursHelpers.h  DetoursPatch.h  Log.h
source/src/: D2.detours.def  D2CMP.detours.cpp  D2Client.detours.cpp  D2Common.detours.cpp  DetoursAutoPatchDirectory.cpp  DetoursDllMain.cpp  DetoursHelpers.cpp  DetoursLauncher.cpp  DetoursPatch.cpp  main.cpp
